--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,21 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
-node_modules/
-
+/node_modules
 /.pnp
 .pnp.js
-.Dockerfile
-.husky/
 
 # testing
 /coverage
 
-# Ignore Visual Studio Code settings
-/.vscode
-
 # production
+/build
 
 # misc
 .DS_Store
@@ -23,18 +17,7 @@ node_modules/
 .env.development.local
 .env.test.local
 .env.production.local
-.env
-.Dockerfile
-
-# Ignore log files
-/logs/
-*.log
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Ignore build artifacts and Docker-related files
-/build
-.Dockerfile
-.dockerignore
